tests/warning_exit_code/warning_exit_code.exp
Check Existing Server With Warnings (zero exit code):
Warning: test.js:4
  4: if (x) {}
         ^ sketchy-null-number: Sketchy null check on number value. Perhaps you meant to check for null instead of for existence?
    3: var x: ?number = 0;
              ^^^^^^^ Potentially null/undefined value.
    3: var x: ?number = 0;
               ^^^^^^ Potentially 0 value.


Found 1 error

Check Existing Server With Errors (nonzero exit code):
Error: test.js:4
  4: if (x) {}
         ^ sketchy-null-number: Sketchy null check on number value. Perhaps you meant to check for null instead of for existence?
    3: var x: ?number = 0;
              ^^^^^^^ Potentially null/undefined value.
    3: var x: ?number = 0;
               ^^^^^^ Potentially 0 value.


Found 1 error


Status (Running Server) With Warnings (zero exit code):
Warning: test.js:4
  4: if (x) {}
         ^ sketchy-null-number: Sketchy null check on number value. Perhaps you meant to check for null instead of for existence?
    3: var x: ?number = 0;
              ^^^^^^^ Potentially null/undefined value.
    3: var x: ?number = 0;
               ^^^^^^ Potentially 0 value.


Found 1 error

Status (Running Server) With Errors (nonzero exit code):
Error: test.js:4
  4: if (x) {}
         ^ sketchy-null-number: Sketchy null check on number value. Perhaps you meant to check for null instead of for existence?
    3: var x: ?number = 0;
              ^^^^^^^ Potentially null/undefined value.
    3: var x: ?number = 0;
               ^^^^^^ Potentially 0 value.


Found 1 error


Status (No Running Server) With Warnings (zero exit code):
Warning: test.js:4
  4: if (x) {}
         ^ sketchy-null-number: Sketchy null check on number value. Perhaps you meant to check for null instead of for existence?
    3: var x: ?number = 0;
              ^^^^^^^ Potentially null/undefined value.
    3: var x: ?number = 0;
               ^^^^^^ Potentially 0 value.


Found 1 error

Status (No Running Server) With Errors (nonzero exit code):
Error: test.js:4
  4: if (x) {}
         ^ sketchy-null-number: Sketchy null check on number value. Perhaps you meant to check for null instead of for existence?
    3: var x: ?number = 0;
              ^^^^^^^ Potentially null/undefined value.
    3: var x: ?number = 0;
               ^^^^^^ Potentially 0 value.


Found 1 error


Check Contents With Warnings (zero exit code):
Warning: test.js:4
  4: if (x) {}
         ^ sketchy-null-number: Sketchy null check on number value. Perhaps you meant to check for null instead of for existence?
    3: var x: ?number = 0;
              ^^^^^^^ Potentially null/undefined value.
    3: var x: ?number = 0;
               ^^^^^^ Potentially 0 value.


Found 1 error

Check Contents With Errors (nonzero exit code):
Error: test.js:4
  4: if (x) {}
         ^ sketchy-null-number: Sketchy null check on number value. Perhaps you meant to check for null instead of for existence?
    3: var x: ?number = 0;
              ^^^^^^^ Potentially null/undefined value.
    3: var x: ?number = 0;
               ^^^^^^ Potentially 0 value.


Found 1 error


